--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "karchive"]
 	path = karchive
-	url = https://git.sailfishos.org/mirror/karchive.git
+	url = https://github.com/sailfishos-mirror/karchive.git
